--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pathfinder",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^9.2.0",
     "graphql": "^16.2.0",
-    "graphql-request": "^3.7.0"
+    "graphql-request": "^3.7.0",
+    "ts-node": "^10.7.0"
   }
 }
